--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,34 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+}
+nav {
+  background-color: white;
+  height: 60px;
+}
+.option {
+  position: absolute;
+  left: 50%;
+  display: flex;
+  margin-top: 20px;
+  transform: translateX(-60%);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.re-sossiaux {
+  float: right;
+  margin: 10px 10px 10px 0px;
+  display: flex;
+  text-decoration: none;
+}
+ul li {
+  display: flex;
+  margin-left: 25px;
+}
+nav h1 {
+  position: absolute;
+  float: left;
+  margin: 10px 0px 10px 10px;
+}
+body {
+  background-color: red;
 }
