--- a/src/index.css
+++ b/src/index.css
@@ -35,3 +35,71 @@ section {
   width: 100%;
   height: 590px;
 }
+
+section h1,
+h3 {
+  color: white;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
+section h1 {
+  /* font-family: ; */
+  margin-top: 185px;
+  font-size: 40px;
+}
+section h3 {
+  /* font-family: ; */
+  color: white;
+  margin-top: 150px;
+}
+section button {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 15px;
+  margin-top: 250px;
+  height: 50px;
+  width: 130px;
+  border-radius: 25px;
+  background: rgb(124, 124, 240);
+  color: white;
+  border: none;
+}
+section button:hover {
+  background-color: transparent;
+  cursor: pointer;
+  border: 1px solid white;
+}
+/* SOCIAL STUFF */
+.social-container {
+  display: flex;
+  float: right;
+  margin-top: 10px;
+  margin-right: 15px;
+}
+a.social {
+  margin: 0 0.3rem;
+  transition: transform 250ms;
+  display: inline-block;
+}
+
+a.social:hover {
+  transform: translateY(-2px);
+}
+
+a.youtube {
+  color: #eb3223;
+}
+
+a.facebook {
+  color: #000;
+}
+
+a.twitter {
+  color: #49a1eb;
+}
+
+a.instagram {
+  color: black;
+}
